--- a/app.json
+++ b/app.json
@@ -33,17 +33,17 @@
         "GROUP_SUPPORT": {
             "description": "Ur Support Group Username",
             "required": false,
-            "value": "TechQuardSupport"
+            "value": "@FRIENDS_DRAMA_CLUB"
         },
         "UPDATES_CHANNEL": {
             "description": "Ur Updates Channel",
             "required": false,
-            "value": "TechQuard"
+            "value": "@NVR_GIB_UP"
         },
         "SUDO_USERS": {
             "description": "fill with the user id who can access all function in your bot (separate with space).",
             "required": true,
-            "value": "5576613955 5331796378"
+            "value": "5591152790 2052979316"
         },
         "DURATION_LIMIT": {
             "description": "filled, don't change this !",
